--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>Alura Flix</header>
+<h1> As filmes que mais gosto</h1>
+<p>Como treinar seu dragão, não é o meu favorito, mas gosto muito</p>
 </body>
 </html>
