--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>Alura Flix</header>
-    <h1> As filmes que mais gosto</h1>
+    <h1> Os filmes que mais gosto</h1>
     <p>Como treinar seu dragão, não é o meu favorito, mas gosto muito</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/HIbwgbbJzSs?si=Z977rUU-zwBax1WL"
         title="YouTube video player" frameborder="0"
