--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraFlix</title>
-<Link rel="stylesheet"href="style.css">
+    <Link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,6 +16,12 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h2>Séries que eu também gosto</h2>
+    <div class="categoria-video" <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/6mAE9Jm4SAQ?si=sJHLUQqjBBH2gZuz" title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
 
 </html>
